--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fluttertoast: ^8.0.9
   meta: ^1.7.0
   flutter_icmp_ping: ^3.1.0
+  device_info_plus: ^9.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
